# ChangeLog for media-gfx/sphinxcontrib-aafig
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 Mar 2012; James Rowe <jnrowe@gmail.com> sphinxcontrib-aafig-1.0-r1.ebuild:
  Switched to EAPI4.

  14 Mar 2012; James Rowe <jnrowe@gmail.com> sphinxcontrib-aafig-1.0-r1.ebuild:
  Use ${PN} in ${HOMEPAGE}.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  14 May 2011; James Rowe <jnrowe@gmail.com> -sphinxcontrib-aafig-1.0.ebuild,
  sphinxcontrib-aafig-1.0-r1.ebuild:
  Keyworded x86.

  14 May 2011; James Rowe <jnrowe@gmail.com> sphinxcontrib-aafig-1.0-r1.ebuild:
  Keyworded amd64.

*sphinxcontrib-aafig-1.0-r1 (14 Apr 2011)

  14 Apr 2011; James Rowe <jnrowe@gmail.com>
  +sphinxcontrib-aafig-1.0-r1.ebuild:
  Support multi-ABI Python [334].

  02 Mar 2011; James Rowe <jnrowe@gmail.com> sphinxcontrib-aafig-1.0.ebuild:
  Added missing PYTHON_MODNAME.

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  06 Oct 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Added remote-id to metadata.

  21 Mar 2010; James Rowe <jnrowe@gmail.com> sphinxcontrib-aafig-1.0.ebuild:
  Added PYTHON_DEPEND setting.

  16 Dec 2009; James Rowe <jnrowe@gmail.com>
  -sphinxcontrib-aafig-0.3.ebuild, sphinxcontrib-aafig-1.0.ebuild:
  Keyworded x86.

  16 Dec 2009; James Rowe <jnrowe@gmail.com> sphinxcontrib-aafig-1.0.ebuild:
  Keyworded amd64.

*sphinxcontrib-aafig-1.0 (16 Nov 2009)

  16 Nov 2009; James Rowe <jnrowe@gmail.com>
  +sphinxcontrib-aafig-1.0.ebuild:
  Version bump [c25].

  12 Nov 2009; James Rowe <jnrowe@gmail.com> sphinxcontrib-aafig-0.3.ebuild:
  Switched to EAPI 2.

  19 Oct 2009; James Rowe <jnrowe@gmail.com> sphinxcontrib-aafig-0.3.ebuild:
  Moved aafigure to PDEPEND to break cyclic dependency.

  19 Oct 2009; James Rowe <jnrowe@gmail.com> sphinxcontrib-aafig-0.3.ebuild:
  Keyworded amd64 [798].
